applies a dynamic, multi-colored text-shadow effect by calculating offsets based on mouse movement

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="hero">
-            <h1 contenteditable>WOWZERS!</h1>
+            <h1 contenteditable>move your mouse around</h1>
         </div>
     </body>
 </html>
